[metadata]
name = statue
author = Sagi Shadur
author_email = saroad2@gmail.com
maintainer = Sagi Shadur
maintainer_email = saroad2@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities
license = Apache License
license_file = LICENSE
description = All your static code analysis tools, in one place
keywords =
    formatting
    static
    code
    analysis
platforms = any

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
include_package_data = True
package_dir =
    = src
install_requires =
    toml >= 0.10.2
    click >= 8.0.1
    GitPython >= 3.1.26
    types-toml >= 0.10.3
    types-setuptools >= 57.4.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    statue = statue.__main__:statue_cli

[tool:pytest]
asyncio_mode = strict
testpaths =
    tests
