[metadata]
name = statue
author = Sagi Shadur
author_email = saroad2@gmail.com
maintainer = Sagi Shadur
maintainer_email = saroad2@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Topic :: Utilities
license = Apache License
license_file = LICENSE
description = All your static code analysis tools, in one place
long-description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
keywords =
    formatting
    static
    code
    analysis
platforms = any

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
include_package_data = True
package_dir =
    = src
install_requires =
    importlib-resources>=5.6.0;python_version<'3.9'
    tomli >= 2.0.1
    tomli-w >= 1.0.0
    click >= 8.1.0
    tqdm >= 4.63.1
    GitPython >= 3.1.27
    types-toml >= 0.10.4
    types-setuptools >= 57.4.11

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    statue = statue.__main__:statue_cli

[tool:pytest]
asyncio_mode = strict
testpaths =
    tests
